--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,16 @@
 # Site settings
-title: Elbe
-email: your-email@domain.com
+title: Chief Mustache Officer
+email: hi@chiefmustacheofficer.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Marketing, revenue, leadership, and mustaches. Everything you need to grow your business in one place. :)
 baseurl: "" # the subpath of your site, e.g. /blog/
 # url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: trevorlongino
+github_username:  TheEnigmaticT
 
 # Build settings
 markdown: kramdown
-
+plugins: [jekyll-paginate]
 
 paginate: 4
 paginate_path: "blog/page:num"
